--- a/login_screen.kv
+++ b/login_screen.kv
@@ -65,7 +65,7 @@
         on_release: app.screen_manager.change_screen("signup_screen")
 
     MDLabel:
-        text: f"[font=Icons] {md_icons['copyright']}[/font]  [font=Roboto]{app.COMPANY_NAME} 2020[/font]"
+        text: Texts.text6
         markup: True
         halign: "center"
         pos_hint: {"center_y":0.05}
