--- a/intro_screen.kv
+++ b/intro_screen.kv
@@ -9,6 +9,12 @@
         orientation: 'vertical'
         padding: dp(5), dp(5)
         Label:
+            id: text_first
+            text: "https://raw.githubusercontent.com/"
+            size_hint_y: None
+            height: 0
+
+        Label:
             id: failed_text
             text: "https://raw.githubusercontent.com/mrsu0993/Images/master/bg1.png"
             size_hint_y: None
@@ -46,4 +52,3 @@
                     md_bg_color: "red"
                     size_hint: dp(1), dp(1)
                     on_release: root.next_image()
-                
