--- a/login_screen.kv
+++ b/login_screen.kv
@@ -1,5 +1,4 @@
 #: import Colors settings.colors.Colors
-#: import Texts settings.texts.Texts
 
 <Login_Screen>:
     name: "login_screen"
@@ -16,7 +15,7 @@
         elevation: 10
 
     MDLabel:
-        text: Texts.text11
+        text: "Sign Up"
         halign: "center"
         pos_hint: {"center_y":.69}
         font_style: "Subtitle2"
@@ -65,7 +64,7 @@
         on_release: app.screen_manager.change_screen("signup_screen")
 
     MDLabel:
-        text: Texts.text6
+        text: "@SuSpeak Copyright 2024"
         markup: True
         halign: "center"
         pos_hint: {"center_y":0.05}
