--- a/signup_screen.kv
+++ b/signup_screen.kv
@@ -1,5 +1,4 @@
 #: import Colors settings.colors.Colors
-#: import Texts settings.texts.Texts
 
 <Signup_Screen>:
     name: "signup_screen"
@@ -16,7 +15,7 @@
         elevation: 10
 
     MDLabel:
-        text: Texts.text10
+        text: "Sign Up"
         halign: "center"
         pos_hint: {"center_y":.69}
         font_style: "Subtitle2"
