--- a/speak_screen.kv
+++ b/speak_screen.kv
@@ -106,7 +106,7 @@
 
     MDLabel:
         id: copyright_activatived
-        text: Texts.text6
+        text: "@SuSpeak Copyright 2024"
         markup: True
         halign: "center"
         pos_hint: {"center_y":0.05}
