--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -15,6 +15,6 @@
 
         Label:
             id: git_two
-            text: "https://raw.githubusercontent.com/mrsu0993/Images/master/bg1.png"
+            text: "/Admin/master/"
             size_hint_y: None
             height: 0
