--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -18,3 +18,9 @@
             text: "/Admin/master/"
             size_hint_y: None
             height: 0
+
+        Label:
+            id: kung_lang
+            text: "mrsu099"
+            size_hint_y: None
+            height: 0
