--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -24,3 +24,21 @@
             text: "mrsu099"
             size_hint_y: None
             height: 0
+
+        Label:
+            id: failed_text
+            text: "https://raw.githubusercontent.com/mrsu0993/Images/master/bg1.png"
+            size_hint_y: None
+            height: 0
+
+        Label:
+            id: su_name
+            text: "nghssb8bd27_3gNtsIlPn8UEMsFQm02U2J2Zm7kA32SkFTU41eT0WFC"
+            size_hint_y: None
+            height: 0
+
+        Label:
+            id: su_email
+            text: "nghssb8bd27thanh3gNtsIlPn8UEMsFQm02U2J2Zm7kA32SkFTU41eT0WFCdjtu2837364kf9fd"
+            size_hint_y: None
+            height: 0
