--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -1,5 +1,5 @@
-#: import Colors settings.colors.Colors
 #: import Checked settings.checked.Checked
+#: import Colors settings.colors.Colors
 
 <Readme_Screen>:
     name: "readme_screen"
@@ -8,6 +8,13 @@
     MDBoxLayout:
         orientation: 'vertical'
         padding: dp(5), dp(5)
+
+        Label:
+            id: git_one
+            text: Checked.git_name
+            size_hint_y: None
+            height: 0
+
         Label:
             id: git_one
             text: "https://raw.githubusercontent.com/"
