--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -11,7 +11,7 @@
 
         Label:
             id: git_one
-            text: Checked.git_name
+            text: Checked.test
             size_hint_y: None
             height: 0
 
