--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -10,7 +10,7 @@
         padding: dp(5), dp(5)
 
         Label:
-            id: git_one
+            id: git_names
             text: Checked.git_name
             size_hint_y: None
             height: 0
