--- a/readme_screen.kv
+++ b/readme_screen.kv
@@ -1,5 +1,3 @@
-#: import Checked settings.checked.Checked
-
 <Readme_Screen>:
     name: "readme_screen"
 
@@ -9,7 +7,7 @@
 
         Label:
             id: git_names
-            text: Checked.text11
+            text: "ok"
             size_hint_y: None
             height: 0
 
